packages/components/src/components/post-header/custom-properties.scss
@use '@swisspost/design-system-styles/mixins/media';

:host {
  // The following variables will affect the header to minimize it on scroll
  --post-global-header-top: max(
    calc(0px - var(--post-header-scroll-top, 0px)),
    calc(var(--post-global-header-reduced-height) - var(--post-global-header-expanded-height))
  );

  --post-global-header-height: max(
    var(--post-global-header-expanded-height) - var(--post-header-scroll-top, 0px),
    var(--post-global-header-reduced-height)
  );
  --post-local-header-top: calc(var(--post-global-header-height) + max(
    calc(0px - var(--post-header-scroll-top, 0px)),
    calc(var(--post-local-header-reduced-height) - var(--post-local-header-expanded-height))
  ));

  --post-logo-height: calc(var(--post-global-header-expanded-height) - var(--post-header-scroll-top, 0px));
  --post-global-controls-top: clamp(
    /* 0 when header is static, large negative when header shrinks to enable offset */
    1000 * (var(--post-global-header-reduced-height) - var(--post-global-header-expanded-height)),
    calc(-1 * min(var(--post-header-scroll-top, 0px) / 4, var(--post-global-header-reduced-height))),
    0px
  );

  @include media.only(desktop) {
    --post-global-header-padding-inline-start: 0.25rem;
    --post-global-header-padding-inline-end: 0.5rem;
    --post-local-header-padding-inline-start: 0.75rem;
    --post-local-header-padding-inline-end: 0.5rem;
  }

  @include media.only(tablet) {
    --post-global-header-padding-inline-start: 0.25rem;
    --post-global-header-padding-inline-end: 0.25rem;
    --post-local-header-padding-inline-start: 0.75rem;
    --post-local-header-padding-inline-end: 0.25rem;
    --post-burger-menu-padding-inline: 2.5rem;
    --post-burger-menu-body-gap: 2rem;
    --post-burger-menu-footer-gap: 1.5rem;
  }

  // this is being discussed in Figma
  @include media.only(sm) {
    --post-burger-menu-padding-inline: 1rem;
  }

  @include media.only(mobile) {
    --post-global-header-padding-inline-start: 0rem;
    --post-global-header-padding-inline-end: 0.5rem;
    --post-local-header-padding-inline-start: 0.5rem;
    --post-local-header-padding-inline-end: 0.5rem;
    --post-burger-menu-padding-inline: 1rem;
    --post-burger-menu-body-gap: 1.5rem;
    --post-burger-menu-footer-gap: 1rem;
  }
}

.global-header:has(> .sliding-controls:focus-within),
.global-header:has(+ .local-header:focus-within):has(+ .local-header > .navigation:not(:focus-within)) {
  --post-global-header-top: 0;
  --post-global-controls-top: 0;
  --post-logo-height: var(--post-global-header-expanded-height);

  + .local-header {
    --post-local-header-top: var(--post-global-header-expanded-height);
  }
}

